[package]
name = "api-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros", "original-uri", "tokio", "tower-log"] }
futures-util = "0.3.32"
governor = "0.10.4"
http-body-util = "0.1.3"
hyper = "1.8.1"
hyper-util = { version = "0.1.20", features = ["tokio"] }
reqwest = { version = "0.13.2", features = ["stream", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.50.0", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tower_governor = { version = "0.8.0", features = ["tracing"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
url = "2.5.4"

[dev-dependencies]
axum = { version = "0.8.8", features = ["tokio"] }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
tower = "0.5.3"
tower-test = "0.4.0"
